syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Balance {
  option (gorm.opts) = {ormable: true};

  // Public key priority:
  // NOTE: Inorder to find latest balance of an address,
  //       follow this order
  // 1) block_number
  // 2) transaction_index
  // 3) log_index
  // 4) public_key

  uint64 block_number = 1 [(gorm.field).tag = {primary_key: true}];
  uint32 transaction_index = 2 [(gorm.field).tag = {primary_key: true}];
  int32  log_index = 3 [(gorm.field).tag = {primary_key: true}];
  string public_key = 4 [(gorm.field).tag = {primary_key: true}];
  string value = 5;
  uint64 timestamp = 6 [(gorm.field).tag = {index: "balance_idx_timestamp"}];
}
